Fixed lines alignment

--- a/web/style.css
+++ b/web/style.css
@@ -1,7 +1,3 @@
-* {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-}
-
 #area_output {
     font-family: 'Courier New', Courier, monospace;
     margin-top: 30px;
